force-app/main/default/objects/RIS_BTTC_TimeSlots_Dev__x/RIS_BTTC_TimeSlots_Dev__x.object-meta.xml
<CustomObject>
    <externalDataSource>BestTimeToCall</externalDataSource>
    <externalName>BTTC-TimeSlots_R4Demo</externalName>
    <label>RISBTTCTimeSlotsDev</label>
    <pluralLabel>RISBTTCTimeSlotsDevs</pluralLabel>
</CustomObject>