force-app/main/default/objects/RIS_BTTC_TimeSlots_Dev__x/fields/EndTime__c.field-meta.xml
<CustomField>
    <fullName>EndTime__c</fullName>
    <label>EndTime</label>
    <length>50</length>
    <type>Text</type>
</CustomField>