force-app/main/default/objects/RIS_BTTC_TimeSlots_Dev__x/fields/Id__c.field-meta.xml
<CustomField>
    <fullName>Id__c</fullName>
    <label>Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>