force-app/main/default/objects/RIS_BTTC_TimeSlots_Dev__x/fields/SlotName__c.field-meta.xml
<CustomField>
    <fullName>SlotName__c</fullName>
    <label>SlotName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>