force-app/main/default/objects/RIS_BTTC_TimeSlots_Dev__x/fields/StartTime__c.field-meta.xml
<CustomField>
    <fullName>StartTime__c</fullName>
    <label>StartTime</label>
    <length>50</length>
    <type>Text</type>
</CustomField>